@@ -225,12 +225,6 @@ void Frame::cleanupPlatformScriptObjects()
     notImplemented();
 }
 
-bool Frame::isCharacterSmartReplaceExempt(UChar, bool)
-{
-    // no smart replace
-    return true;
-}
-
 DragImageRef Frame::dragImageForSelection() 
 {
     notImplemented();
