@@ -1,3 +1,9 @@
+2007-07-04  Matt Lilek  <pewtermoose@gmail.com>
+
+        Not reviewed, gdk build fix.
+
+        * platform/gdk/FrameGdk.cpp:
+
 2007-07-05  Antti Koivisto  <antti@apple.com>
 
         Reviewed by John.
